# AI-Agent

./: .env.example  instructions.md  main.py  pyproject.toml  test.py  tools.json
src/: main.py
src/configs/: env.py  http.py
src/llm/: base.py  core.py  prompt.py
src/schemas/: agent.py  flight.py  hotel.py  order.py  traveller.py
src/templates/: chat.html
src/tools/: registry.py
src/tools/flight/amadeus/: agent_tool.py  auth.py  core.py  router.py
src/tools/hotel/amadeus/: agent_tool.py  auth.py  core.py  router.py
